# kdebase

./: Makefile  README.md  kdebase-4.3.4-bz#608007.patch  kdebase-4.3.4-bz#729307.patch  kdebase-4.3.4-konsole-bz#631481.patch  kdebase-4.3.4-konsole-do-not-crash-on-resize.patch  kdebase-4.8.0-konsole-cutted-font.patch  kdebase-dolphin-do-not-crash-phonon-on-png-files.patch  kdebase-konsole-do-not-hang-upon-close.patch  kdebase-konsole-make-zmodem-file-transfer-to-work.patch  kdebase-plasma-folder-view-add-konsole-to-menu.patch  kdebase.spec
src/: CMakeLists.txt  Mainpage.dox  README
src/apps/doc/dolphin/: index.cache.bz2
src/apps/doc/kdepasswd/: index.cache.bz2
src/apps/doc/kfind/: index.cache.bz2
src/apps/doc/kinfocenter/: index.cache.bz2
src/apps/doc/kinfocenter/devices/: index.cache.bz2
src/apps/doc/kinfocenter/dma/: index.cache.bz2
src/apps/doc/kinfocenter/interrupts/: index.cache.bz2
src/apps/doc/kinfocenter/ioports/: index.cache.bz2
src/apps/doc/kinfocenter/memory/: index.cache.bz2
src/apps/doc/kinfocenter/nics/: index.cache.bz2
src/apps/doc/kinfocenter/opengl/: index.cache.bz2
src/apps/doc/kinfocenter/partitions/: index.cache.bz2
src/apps/doc/kinfocenter/pci/: index.cache.bz2
src/apps/doc/kinfocenter/pcmcia/: index.cache.bz2
src/apps/doc/kinfocenter/processor/: index.cache.bz2
src/apps/doc/kinfocenter/protocols/: index.cache.bz2
src/apps/doc/konqueror/: index.cache.bz2
src/apps/doc/konsole/: index.cache.bz2
src/apps/doc/kwrite/: index.cache.bz2
src/apps/dolphin/src/: dolphinnewmenu.cpp
src/apps/nsplugins/sdk/: npapi.h
(+6 files in other folders)
